--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,30 @@ body {
 
 /* HERO */
 .hero {
-  height: 75vh;              /* reduced height */
-  min-height: 520px;         /* prevents too small on mobile */
-  background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)),
-              url('../images/hero.jpg') center/cover;
+  height: 75vh;
+  min-height: 520px;
+  background-image:
+    linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)),
+    url('../images/logo.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* desktop default */
+
   display: flex;
   align-items: center;
   justify-content: center;
   padding-top: 60px;
+}
+
+@media (max-width: 768px) {
+  .hero {
+    height: auto;
+    min-height: 420px;
+
+    background-size: contain;
+    background-position: top center;
+  }
 }
 
 
@@ -120,7 +136,7 @@ body {
   background: white;
   padding: 30px;
   border-radius: 12px;
-  box-shadow: 0 10px 25px rgba(0,0,0,.1);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, .1);
   animation: fadeUp 1s ease;
 }
 
@@ -174,13 +190,12 @@ body {
     opacity: 0;
     transform: translateY(30px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
   }
 }
-
-
 
 /* TABS */
 .tabs {
@@ -216,12 +231,17 @@ body {
 .cars-grid.active {
   display: grid;
 }
-/* 
+
+.car-card h3 {
+  margin: 15px 0 5px;
+}
 .car-card {
+  min-width: 260px;
   background: white;
   padding: 20px;
   border-radius: 14px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
+  text-align: center;
 }
 
 .car-card img {
@@ -229,10 +249,6 @@ body {
   height: 180px;
   object-fit: cover;
   border-radius: 10px;
-} */
-
-.car-card h3 {
-  margin: 15px 0 5px;
 }
 
 /* SLIDER */
@@ -253,18 +269,3 @@ body {
   transition: transform 0.6s ease;
 }
 
-.car-card {
-  min-width: 260px;
-  background: white;
-  padding: 20px;
-  border-radius: 14px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.12);
-  text-align: center;
-}
-
-.car-card img {
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 10px;
-}
